--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "postinstall": "npm run seed",
+    "heroku-postbuild": "npm run build",
+    "seed": "cd seeds && node seed.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +25,7 @@
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0"
   }
