--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.4"
   },
