--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "watch": "nodemon server.js",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "start:dev": "concurrently \"nodemon --ignore 'Client/*'\" \"npm run Client\"",
+    "client": "cd Client && npm run start",
+    "install": "cd Client && npm install",
+    "build": "cd Client && npm run build",
     "postinstall": "npm run seed",
     "heroku-postbuild": "npm run build",
     "seed": "cd seeds && node seed.js"
