--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "proxy": "http://localhost:8080",
   "engines": {
     "node": "12.16.3",
     "npm": "6.14.4"
